--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-    "name": "@types/webidl-conversions",
-    "version": "7.0.3",
-    "description": "TypeScript definitions for webidl-conversions",
-    "homepage": "https://github.com/DefinitelyTyped/DefinitelyTyped/tree/master/types/webidl-conversions",
+    "name": "@types/whatwg-url",
+    "version": "11.0.4",
+    "description": "TypeScript definitions for whatwg-url",
+    "homepage": "https://github.com/DefinitelyTyped/DefinitelyTyped/tree/master/types/whatwg-url",
     "license": "MIT",
     "contributors": [
+        {
+            "name": "Alexander Marks",
+            "githubUsername": "aomarks",
+            "url": "https://github.com/aomarks"
+        },
         {
             "name": "ExE Boss",
             "githubUsername": "ExE-Boss",
@@ -21,10 +26,12 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/DefinitelyTyped/DefinitelyTyped.git",
-        "directory": "types/webidl-conversions"
+        "directory": "types/whatwg-url"
     },
     "scripts": {},
-    "dependencies": {},
-    "typesPublisherContentHash": "ff1514e10869784e8b7cca9c4099a4213d3f14b48c198b1bf116300df94bf608",
-    "typeScriptVersion": "4.5"
+    "dependencies": {
+        "@types/webidl-conversions": "*"
+    },
+    "typesPublisherContentHash": "3efa2ac3da0eef7a1b38bc379a0936a1d6a3f437ff481a88b01f2aa6ba5dae2e",
+    "typeScriptVersion": "4.6"
 }
